examples/diagnostics/expected/1189-diagnostics-unknown-builtin.stderr
error: unknown intrinsic 'mystery'
  --> examples/diagnostics/1189-diagnostics-unknown-builtin.sx:12:1
   |
12 | mystery :: ($T: Type, x: T) -> T intrinsic;
   | ^^^^^^^
